Store: Fix breadcrumb spacing (#24442)

--- a/client/extensions/woocommerce/components/action-header/style.scss
+++ b/client/extensions/woocommerce/components/action-header/style.scss
@@ -72,7 +72,7 @@
 		span + span::before {
 			content: ' / ';
 			color: $gray;
-			margin: 0 2px;
+			margin: 0 2px 0 4px;
 		}
 	}
 }
